--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BCGallery</string>
+    <string name="no_content">No files here</string>
+    <string name="empty" />
 </resources>
