--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BCGallery</string>
     <string name="no_content">No files here</string>
     <string name="empty" />
+    <string name="parent_files_empty">No content in parent directory</string>
 </resources>
