--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="no_content">No files here</string>
     <string name="empty" />
     <string name="parent_files_empty">No content in parent directory</string>
+    <string name="action_rotate">Rotate</string>
+    <string name="action_share">Share</string>
+    <string name="action_crop">Crop</string>
+    <string name="action_delete">Delete</string>
 </resources>
