--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_share">Share</string>
     <string name="action_crop">Crop</string>
     <string name="action_delete">Delete</string>
+    <string name="action_edit">Edit</string>
 </resources>
