--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="action_crop">Crop</string>
     <string name="action_delete">Delete</string>
     <string name="action_edit">Edit</string>
+    <string name="discord">https://discord.gg/6V6RNHm</string>
 </resources>
